# detection-of-network-intrusions

./: .gitignore  README.md  random-forest-kdd.ipynb  test_datasets.ipynb
detection-of-network-intrusions/: eval_hybrid_ensemble.py  generate_visualizations.py  main.py  pyproject.toml
detection-of-network-intrusions/models/: kaggle-model_rf_normal_vs_Denial of Service.joblib  kaggle-model_rf_normal_vs_Malware.joblib  model_rf_normal_vs_DoS.joblib  model_rf_normal_vs_R2L.joblib  model_rf_normal_vs_U2R.joblib  v1_model_20251207_080312.pt  v1_model_cores_iot_20260111_023211.pt  v1_model_cores_iot_20260111_023521.pt  v1_model_cores_iot_20260111_023800.pt  v1_model_cores_iot_20260111_024112.pt  v1_model_cores_iot_20260111_024349.pt  v1_model_kddcup_20260111_030403.pt  v1_model_kddcup_20260111_234705.pt  v1_model_kddcup_20260114_194654.pt  v1_model_kddcup_20260114_201516.pt  v1_model_kddcup_20260114_201839.pt  v1_model_kddcup_20260114_202125.pt  v1_model_kddcup_20260114_202247.pt  v1_model_kddcup_20260114_202408.pt  v1_model_netflow_20260111_024544.pt  v1_model_netflow_20260111_024744.pt  v1_model_netflow_20260111_024924.pt  v1_model_netflow_20260111_025543.pt
detection-of-network-intrusions/results/: KDD_evaluation_results.csv  Kitsune_evaluation_results.csv  Netflow_evaluation_results.csv  comprehensive_evaluation_results.csv  v1_model_20251207_070341_metrics.json  v1_model_20251207_070805_metrics.json  v1_model_20251207_070907_metrics.json  v1_model_20251207_071002_metrics.json  v1_model_20251207_071055_metrics.json  v1_model_20251207_071145_metrics.json  (+11 more)
(+40 files in other folders)
