[project]
name = "detection-of-network-intrusions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
